# ftracker

./: .gitignore  pyproject.toml
ftracker/scraper/: client.py  run.py
tests/: test_api.py  test_ftracker.py
